# NeuroCBIR

./: .dockerignore  .gitignore  ADNI_preparation.ipynb  CBIR.ipynb  CBIR_wholeBrain.ipynb  CBIR_wholeBrain_SVF.ipynb  LICENSE  README.md  compute_SVF.ipynb  contrastive_learning_training.ipynb  global_AE_training.ipynb  global_SVF_training.ipynb  main.ipynb  readme.md  requirements.txt  run_docker_neurocbir.sh  run_neurocbir copy.sh  run_neurocbir.sh  run_snakemake.sh  seg_preparation.ipynb  setup.sh  setup_docker.sh  subcortical_AE_training.ipynb  subcortical_SVF_training .ipynb
cbir/: evaluation.py  feature_engineering.py  projection.py
configs/: cbir_eval.json  cl_embedding.json  create_bb_config.py  data_index_config.json  eval_oasis3.json  train_autoencoder_brain_regions_config.py  train_contrastive.json  umap_embedding.json  vae_embedding_oasis3.json
data/: common_bounding_boxes.json  individual_bounding_boxes.json
deploy/: entrypoint.sh
deploy/neurocbir/: MANIFEST.in  README.md  __main__.py  dependencies.py  main.py  pyproject.toml  requirements.txt  setup.py
deploy/neurocbir/configs/: internal_config.yaml  user_config.yaml
deploy/neurocbir/models/: q2e_model.py
deploy/neurocbir/runners/: __init__.py  cbir_region.py  cbir_whole_brain.py
deploy/neurocbir/utils/: utils.py
dev/: README.md  requirements.txt  run_reproducibility_check.py
figures/: boxplot_vars.json  boxplot_vars_ssim.json
model/: __init__.py  autoencoder.py  contrastive_model.py  gradacc.py  losses.py
notebooks/: CL_CBIR_wholeBrain.ipynb  Tables.ipynb  computational_times.ipynb  (+6 more)
(+178 files in other folders)
